test cases for Event and EventScheduler